@@ -39,6 +39,7 @@
 28. When navigating popupmenus with the keyboard, skip over disabled items.
 29. Add option to control light border on windows.
 30. Move kwin menu icon when pressed.
+31. Only draw mouse-over effect on sliders when mouse is over slider handle.
 
 0.62.9
 ------
